--- a/aiwrite/gradgui/locales/en.json
+++ b/aiwrite/gradgui/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "title": "AIWrite - AI Writing Assistant",
+  "title": "AIWrite - AI Writing Assistant (Demo Version)",
   "manuscripts_tab": "Manuscripts",
   "review_tab": "Review",
   "projects_tab": "Projects", 
