Changed preview size

--- a/aiwrite/gradgui/locales/en.json
+++ b/aiwrite/gradgui/locales/en.json
@@ -19,7 +19,7 @@
   "enhance_selected_section": "Enhance Selected Section",
   "manuscript_content": "Manuscript Content",
   "update_manuscript": "Update Manuscript",
-  "manuscript_preview": "### Manuscript Preview",
+  "manuscript_preview": "Manuscript Preview",
   "review_and_critique": "## Review and Critique",
   "section_to_review": "Section to Review",
   "criticize_section": "Criticize Section",
