--- a/aiwrite/gradgui/locales/pt.json
+++ b/aiwrite/gradgui/locales/pt.json
@@ -19,7 +19,7 @@
   "enhance_selected_section": "Melhorar Seção Selecionada",
   "manuscript_content": "Conteúdo do Manuscrito",
   "update_manuscript": "Atualizar Manuscrito",
-  "manuscript_preview": "### Prévia do Manuscrito",
+  "manuscript_preview": "Prévia do Manuscrito",
   "review_and_critique": "## Revisão e Crítica",
   "section_to_review": "Seção para Revisar",
   "criticize_section": "Criticar Seção",
