--- a/aiwrite/gradgui/locales/pt.json
+++ b/aiwrite/gradgui/locales/pt.json
@@ -1,5 +1,5 @@
 {
-  "title": "AIWrite - Assistente de Escrita com IA (versão Demo)",
+  "title": "AIWrite - Assistente IA de Escrita(Demo)",
   "manuscripts_tab": "Manuscritos",
   "review_tab": "Revisão",
   "projects_tab": "Projetos",
