--- a/aiwrite/gradgui/locales/pt.json
+++ b/aiwrite/gradgui/locales/pt.json
@@ -10,7 +10,7 @@
   "create_manuscript": "Criar Manuscrito",
   "select_manuscript": "Selecionar Manuscrito",
   "load_manuscript": "Carregar Manuscrito",
-  "delete_manuscript": "🗑️ Delete",
+  "delete_manuscript": "🗑️ Deletar",
   "section_editor": "## Editor de Seções",
   "sections": "Seções",
   "new_section_name": "Nome da Nova Seção",
